--- a/env/dev/values.yaml
+++ b/env/dev/values.yaml
@@ -1,1 +1,10 @@
+replicaCount: 2
 
+image:
+  repository: kapyuval/msd-test-app
+  tag: "1.0.0"
+  pullPolicy: IfNotPresent
+
+service:
+  type: ClusterIP
+  port: 80
