--- a/charts/msd-test-app/templates/service.yaml
+++ b/charts/msd-test-app/templates/service.yaml
@@ -1,1 +1,15 @@
-
+apiVersion: v2
+kind: Service
+metadata:
+  name: {{ include "msd-test-app.fullname" . }}
+  labels:
+    {{- include "msd-test-app.labels" . | nindent 4 }}
+spec:
+  type: {{ .Values.service.type }}
+  ports:
+    - port: {{ .Values.service.port }}
+      targetPort: http
+      protocol: TCP
+      name: http
+  selector:
+    {{- include "msd-test-app.selectorLabels" . | nindent 4 }}
