--- a/apps/msd-test-app.yaml
+++ b/apps/msd-test-app.yaml
@@ -1,1 +1,21 @@
-
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: msd-test-app
+  namespace: argocd
+spec:
+  project: default
+  source:
+    repoURL: https://github.com/kapyuval/msd-test-app.git
+    targetRevision: HEAD
+    path: charts/app1
+    helm:
+      valueFiles:
+        - values.yaml
+  destination:
+    server: https://kubernetes.default.svc
+    namespace: app1-namespace
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
