--- a/root-app/root-app.yaml
+++ b/root-app/root-app.yaml
@@ -6,9 +6,11 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://your-git-repo.git
-    targetRevision: HEAD
-    path: argocd
+    repoURL: https://github.com/kapyuval/msd-test-helm.git
+    targetRevision: main
+    path: root-app
+    directory:
+      recurse: true
   destination:
     server: https://kubernetes.default.svc
     namespace: argocd
@@ -16,5 +18,3 @@ spec:
     automated:
       prune: true
       selfHeal: true
-  directory:
-    recurse: true
