--- a/root-app/root-app.yaml
+++ b/root-app/root-app.yaml
@@ -12,7 +12,7 @@ spec:
     directory:
       recurse: true
   destination:
-    server: https://kubernetes.default.svc
+    server: in-cluster
     namespace: argocd
   syncPolicy:
     automated:
