--- a/root-app/msd-test-app.yaml
+++ b/root-app/msd-test-app.yaml
@@ -13,7 +13,7 @@ spec:
       valueFiles:
         - values.yaml
   destination:
-    server: in-cluster
+    name: in-cluster
     namespace: app1-namespace
   syncPolicy:
     automated:
