--- a/root-app/root-app.yaml
+++ b/root-app/root-app.yaml
@@ -12,7 +12,7 @@ spec:
     directory:
       recurse: true
   destination:
-    server: in-cluster
+    name: in-cluster
     namespace: argocd
   syncPolicy:
     automated:
