--- a/root-app/applicationset.yaml
+++ b/root-app/applicationset.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
-  name: applicaionset
+  name: applicationset
   namespace: argocd
 spec:
   generators:
