--- a/root-app/applicationset.yaml
+++ b/root-app/applicationset.yaml
@@ -1,3 +1,34 @@
+# apiVersion: argoproj.io/v1alpha1
+# kind: ApplicationSet
+# metadata:
+  # name: applicationset
+  # namespace: argocd
+# spec:
+  # generators:
+    # - git:
+        # repoURL: https://github.com/kapyuval/msd-test-helm.git
+        # revision: main
+        # directories:
+          # - path: apps/*
+  # template:
+    # metadata:
+      # name: '{{path.basename}}'
+    # spec:
+      # project: default
+      # source:
+        # repoURL: https://github.com/kapyuval/msd-test-helm.git
+        # targetRevision: main
+        # path: apps/{{path.basename}}
+      # destination:
+        # name: in-cluster
+        # namespace: '{{path.basename}}'
+      # syncPolicy:
+        # automated:
+          # prune: true
+          # selfHeal: true
+        # syncOptions:
+          # - CreateNamespace=true
+
 apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
@@ -9,22 +40,20 @@ spec:
         repoURL: https://github.com/kapyuval/msd-test-helm.git
         revision: main
         directories:
-          - path: apps/*
+          - path: apps/prometheus/*
   template:
     metadata:
-      name: '{{path.basename}}'
+      name: prometheus-{{path.basename}}
     spec:
       project: default
       source:
         repoURL: https://github.com/kapyuval/msd-test-helm.git
         targetRevision: main
-        path: apps/{{path.basename}}
+        path: "{{path}}"
       destination:
         name: in-cluster
-        namespace: '{{path.basename}}'
+        namespace: argocd
       syncPolicy:
         automated:
           prune: true
           selfHeal: true
-        syncOptions:
-          - CreateNamespace=true
