--- a/apps/msd-test-app/dev/values.yaml
+++ b/apps/msd-test-app/dev/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 2
 
 image:
-  repository: kapyuval/msd-test-app
+  repository: docker.io/kapyuval/msd-test-app
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: "v1.0.17"
