--- a/charts/msd-test-app/templates/configmap.yaml
+++ b/charts/msd-test-app/templates/configmap.yaml
@@ -1,1 +1,22 @@
-
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: react-html-snippet
+data:
+  snippet.html: |
+    <div className="App">
+      <header className="App-header">
+        <img src={logo} className="App-logo" alt="logo" />
+        <p>
+          Edit <code>src/App.js</code> and save to reload.
+        </p>
+        <a
+          className="App-link"
+          href="https://reactjs.org"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          Learn React
+        </a>
+      </header>
+    </div>"
