--- a/charts/msd-test-app/templates/configmap.yaml
+++ b/charts/msd-test-app/templates/configmap.yaml
@@ -6,10 +6,7 @@ data:
   snippet.html: |
     <div className="App">
       <header className="App-header">
-        <img src={logo} className="App-logo" alt="logo" />
-        <p>
-          Edit <code>src/App.js</code> and save to reload.
-        </p>
+        <img src=https://pethelpful.com/.image/w_3840,q_auto:good,c_fill,ar_4:3/MTk2NzY3MjA5ODc0MjY5ODI2/top-10-cutest-cat-photos-of-all-time.jpg className="App-logo" alt="logo" />
         <a
           className="App-link"
           href="https://reactjs.org"
@@ -19,20 +16,4 @@ data:
           Learn React
         </a>
       </header>
-    </div>"
-    <div className="App">
-      <header className="App-header">
-        <img src={logo} className="App-logo" alt="logo" />
-        <p>
-          Edit <code>src/App.js</code> and save to reload.
-        </p>
-        <a
-          className="App-link"
-          href="https://reactjs.org"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          Learn React
-        </a>
-      </header>
-    </div>"
+    </div>
