--- a/apps/prometheus/kustomization.yaml
+++ b/apps/prometheus/kustomization.yaml
@@ -2,9 +2,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 helmCharts:
-  - name: prometheus-dev
+  - name: prometheus
     repo: https://prometheus-community.github.io/helm-charts
     version: 76.4.0
-    releaseName: prometheus-dev
+    releaseName: prometheus
     namespace: argocd
     valuesFile: values.yaml
