--- a/root-app/applicationset.yaml
+++ b/root-app/applicationset.yaml
@@ -51,7 +51,7 @@ spec:
     spec:
       project: default
       source:
-        repoURL: '{{repoURL}}'
+        repoURL: https://github.com/kapyuval/msd-test-helm.git
         targetRevision: main
         path: '{{path}}'
         kustomize:
