--- a/apps/keda/kustomization.yaml
+++ b/apps/keda/kustomization.yaml
@@ -1,6 +1,8 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
-namespace: argocd
+metadata:
+  name: keda
+  namespace: argocd
 
 helmCharts:
   - name: keda
