--- a/apps/keda/kustomization.yaml
+++ b/apps/keda/kustomization.yaml
@@ -1,8 +1,5 @@
-apiVersion: kustomize.toolkit.fluxcd.io/v1
+apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-metadata:
-  name: keda
-  namespace: argocd
 
 helmCharts:
   - name: keda
