--- a/apps/prometheus/kustomization.yaml
+++ b/apps/prometheus/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 helmCharts:
-  - name: prometheus
+  - name: kube-prometheus-stack
     repo: https://prometheus-community.github.io/helm-charts
     version: 76.4.0
     releaseName: kube-prometheus-stack
