--- a/charts/msd-test-app/templates/scaledobject.yaml
+++ b/charts/msd-test-app/templates/scaledobject.yaml
@@ -12,7 +12,7 @@ spec:
   triggers:
     - type: prometheus
       metadata:
-        serverAddress: http://prometheus.local:9090
+        serverAddress: http://prometheus.local
         metricName: msd_cpu_limit_reached_pods
         query: >
           count by (pod) (
