--- a/root-app/applicationset.yaml
+++ b/root-app/applicationset.yaml
@@ -28,4 +28,5 @@ spec:
           prune: true
           selfHeal: true
         syncOptions:
-          - CreateNamespace=true
+        - CreateNamespace=true
+        - ServerSideApply=true
