--- a/apps/prometheus/kustomization.yaml
+++ b/apps/prometheus/kustomization.yaml
@@ -1,5 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+resources:
+  - ingress.yaml
 
 helmCharts:
   - name: kube-prometheus-stack
@@ -7,3 +9,4 @@ helmCharts:
     version: 76.4.0
     releaseName: kube-prometheus-stack
     valuesFile: values.yaml
+    namespace: argocd
