--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,3 +23,4 @@ jobs:
         with:
           chart-path: ${{ matrix.chart }}
           release-name: test-${{ matrix.chart }}
+          namespace: argocd
