--- a/.github/actions/versioning/action.yaml
+++ b/.github/actions/versioning/action.yaml
@@ -31,10 +31,15 @@ runs:
         if [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
           echo "Bumping version"
           # Incrementing the patch version
-          VERSION=$(npm version patch --no-git-tag-version)
-          echo "New Version: $VERSION"
-          echo "VERSION=$VERSION" >> $GITHUB_ENV
-          echo "VERSION=$VERSION" >> "$GITHUB_OUTPUT"
+          CHART_FILE="charts/${{ inputs.chartName }}/Chart.yaml"
+          VERSION_LINE=$(grep '^version:' "$CHART_FILE")
+          VERSION=$(echo "$VERSION_LINE" | cut -d: -f2 | tr -d ' ')
+          PATCH_VERSION=$(echo "$VERSION" | cut -d. -f3)
+          PATCH_VERSION=$((PATCH_VERSION + 1))
+          NEW_VERSION="$MAJOR.$MINOR.$PATCH_VERSION"
+          echo "New version: $NEW_VERSION"          
+          echo "VERSION=$NEW_VERSION" >> $GITHUB_ENV
+          echo "VERSION=$NEW_VERSION" >> "$GITHUB_OUTPUT"
         else
           echo "Skipping version bump"
         fi
