--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -41,20 +41,9 @@ jobs:
             echo "PR validation failed. Please check the logs."
           fi
           
-  # # PR Validation Job (Runs on PRs)
-  # pr-validation:
-  #   needs: [validate-charts] # To make sure image is built properly as well
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v4
-
-  #     - name: PR Validation
-  #     # Optionally, ensure 'build' job runs first if needed
-  #       uses: ./.github/actions/pr-validation
-
   # Versioning Job (Handles versioning strategy for the app)
   versioning:
+    needs: validate-charts
     runs-on: ubuntu-latest
     outputs:
       version: ${{ steps.versioning.outputs.version }}
