--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -37,7 +37,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Call reusable Helm validation workflow
-        uses: ./.github/workflows/helm-validation.yml
+        uses: ./.github/workflows/helm-validation.yaml
         with:
           chart-path: ${{ matrix.chart }}
           release-name: test-${{ matrix.chart }}
