--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -37,7 +37,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Validate Helm chart ${{ matrix.chart }}
-        uses: ./actions/helm-validate
+        uses: ./actions/helm-validator
         with:
           chart-path: ${{ matrix.chart }}
           release-name: release-${{ matrix.chart }}
