--- a/.github/actions/helm-validator/action.yaml
+++ b/.github/actions/helm-validator/action.yaml
@@ -33,7 +33,7 @@ runs:
     - name: Helm Dry Run Template
       shell: bash
       run: |
-        helm template $(${{ inputs.release-name }} | cut -d/ -f2) ${{ inputs.chart-path }} \
+        helm template $(echo ${{ inputs.release-name }} | cut -d/ -f2) ${{ inputs.chart-path }} \
           --values ${{ inputs.chart-path }}/values.yaml \
           --namespace ${{ inputs.namespace }}
 
