--- a/.github/actions/helm-validator/action.yaml
+++ b/.github/actions/helm-validator/action.yaml
@@ -33,12 +33,11 @@ runs:
     - name: Helm Dry Run Template
       shell: bash
       run: |
-        NAME=$(echo ${{ inputs.release-name }} | cut -d/ -f2)
-        helm template $NAME | cut -d/ -f2) ${{ inputs.chart-path }} \
-          --values ${{ inputs.chart-path }}/values.yaml \
-          --namespace ${{ inputs.namespace }}
-
-    - name: Validate with kubeconform
+        NAME="$(echo "${{ inputs.release-name }}" | cut -d/ -f2)"
+        helm template "$NAME" "${{ inputs.chart-path }}" \
+          --values "${{ inputs.chart-path }}/values.yaml" \
+          --namespace "${{ inputs.namespace }}"
+          - name: Validate with kubeconform
       shell: bash
       run: |
         helm template ${{ inputs.release-name }} ${{ inputs.chart-path }} \
