--- a/.github/actions/helm-validator/action.yaml
+++ b/.github/actions/helm-validator/action.yaml
@@ -15,6 +15,13 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - name: Set release name from chart path
+      id: release
+      shell: bash
+      run: |
+        NAME="$(basename "${{ inputs.chart-path }}")"
+        echo "RELEASE_NAME=$NAME" >> "$GITHUB_ENV"
+
     - name: Set up Helm
       uses: azure/setup-helm@v3
       with:
@@ -34,7 +41,7 @@ runs:
       shell: bash
       run: |
         NAME="$(echo "${{ inputs.release-name }}" | cut -d/ -f2)"
-        helm template "$NAME" "${{ inputs.chart-path }}" \
+        helm template "$RELEASE_NAME" "${{ inputs.chart-path }}" \
           --values "${{ inputs.chart-path }}/values.yaml" \
           --namespace "${{ inputs.namespace }}"
           
