--- a/.github/actions/helm-validator/action.yml
+++ b/.github/actions/helm-validator/action.yml
@@ -15,6 +15,13 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - name: Set release name from chart path
+      id: release
+      shell: bash
+      run: |
+        NAME="$(basename "${{ inputs.chart-path }}")"
+        echo "RELEASE_NAME=$NAME" >> "$GITHUB_ENV"
+
     - name: Set up Helm
       uses: azure/setup-helm@v3
       with:
@@ -33,10 +40,11 @@ runs:
     - name: Helm Dry Run Template
       shell: bash
       run: |
-        helm template ${{ inputs.release-name }} ${{ inputs.chart-path }} \
-          --values ${{ inputs.chart-path }}/values.yaml \
-          --namespace ${{ inputs.namespace }}
-
+        NAME="$(echo "${{ inputs.release-name }}" | cut -d/ -f2)"
+        helm template "$RELEASE_NAME" "${{ inputs.chart-path }}" \
+          --values "${{ inputs.chart-path }}/values.yaml" \
+          --namespace "${{ inputs.namespace }}"
+          
     - name: Validate with kubeconform
       shell: bash
       run: |
