--- a/.github/actions/helm-validator/action.yaml
+++ b/.github/actions/helm-validator/action.yaml
@@ -20,7 +20,7 @@ runs:
       shell: bash
       run: |
         NAME="$(basename "${{ inputs.chart-path }}")"
-        echo $RELEASE_NAME
+        echo $NAME
         echo "RELEASE_NAME=$NAME" >> "$GITHUB_ENV"
 
     - name: Set up Helm
