--- a/.github/actions/helm-validator/action.yaml
+++ b/.github/actions/helm-validator/action.yaml
@@ -28,11 +28,14 @@ runs:
       with:
         version: v3.14.0
 
-    - name: Install kubeconform
+    - name: Install tools
       shell: bash
       run: |
         curl -L https://github.com/yannh/kubeconform/releases/latest/download/kubeconform-linux-amd64.tar.gz \
         | tar xz && sudo mv kubeconform /usr/local/bin/
+
+        wget -qO /usr/local/bin/yq https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64
+        chmod +x /usr/local/bin/yq
 
     - name: Set up CRD schemas for kubeconform
       shell: bash
