--- a/.github/actions/helm-validator/action.yaml
+++ b/.github/actions/helm-validator/action.yaml
@@ -55,6 +55,12 @@ runs:
     - name: Validate with kubeconform
       shell: bash
       run: |
+        # Get the actual group from Helm output
+        helm template "$RELEASE_NAME" "${{ inputs.chart-path }}" \
+          --values "${{ inputs.chart-path }}/values.yaml" \
+          --namespace "${{ inputs.namespace }}" \
+        | grep "apiVersion: "
+
         helm template ${{ env.RELEASE_NAME }} ${{ inputs.chart-path }} \
           --values ${{ inputs.chart-path }}/values.yaml \
           --namespace ${{ inputs.namespace }} \
