--- a/.github/actions/helm-validator/action.yaml
+++ b/.github/actions/helm-validator/action.yaml
@@ -41,7 +41,7 @@ runs:
       shell: bash
       run: |
         mkdir -p crds/keda.sh
-        curl -sSL https://raw.githubusercontent.com/kedacore/keda/main/deploy/crds/keda.keda.sh_scaledobjects.yaml \
+        curl -sSL https://raw.githubusercontent.com/kedacore/keda/refs/heads/main/config/crd/bases/keda.sh_scaledjobs.yaml \
           -o scaledobject-crd.yaml
         yq -o=json '.spec.versions[] | select(.name == "v1") | .schema.openAPIV3Schema' scaledobject-crd.yaml > crds/keda.sh/ScaledObject.json
         
