--- a/.github/actions/helm-validator/action.yaml
+++ b/.github/actions/helm-validator/action.yaml
@@ -59,7 +59,7 @@ runs:
     - name: Validate with kubeconform
       shell: bash
       run: |
-        ls crds/
+        cat crds/keda.sh_v1alpha1_ScaledObject.json
         helm template ${{ env.RELEASE_NAME }} ${{ inputs.chart-path }} \
           --values ${{ inputs.chart-path }}/values.yaml \
           --namespace ${{ inputs.namespace }} \
