--- a/.github/actions/helm-validator/action.yaml
+++ b/.github/actions/helm-validator/action.yaml
@@ -41,7 +41,7 @@ runs:
       shell: bash
       run: |
         mkdir -p crds
-        curl -sSL https://raw.githubusercontent.com/kedacore/keda/refs/heads/main/config/crd/bases/keda.sh_scaledjobs.yaml \
+        curl -sSL https://raw.githubusercontent.com/kedacore/keda/refs/heads/main/config/crd/bases/keda.sh_scaledobjects.yaml \
           -o scaledobject-crd.yaml
         yq -o=json '.spec.versions[] | select(.name == "v1alpha1") | .schema.openAPIV3Schema' scaledobject-crd.yaml > crds/keda.sh_v1alpha1_ScaledObject.json
         
@@ -59,7 +59,6 @@ runs:
     - name: Validate with kubeconform
       shell: bash
       run: |
-        cat crds/keda.sh_v1alpha1_ScaledObject.json
         helm template ${{ env.RELEASE_NAME }} ${{ inputs.chart-path }} \
           --values ${{ inputs.chart-path }}/values.yaml \
           --namespace ${{ inputs.namespace }} \
