--- a/.github/actions/helm-validator/action.yaml
+++ b/.github/actions/helm-validator/action.yaml
@@ -67,5 +67,5 @@ runs:
             -summary \
             -verbose \
             -schema-location default \
-            -schema-location "file://crds" \
+            -schema-location "file://$(pwd)/crds" \
             -kubernetes-version 1.27.0
