--- a/.github/actions/helm-validator/action.yaml
+++ b/.github/actions/helm-validator/action.yaml
@@ -41,9 +41,9 @@ runs:
       shell: bash
       run: |
         mkdir -p crds
-        curl -sSL https://raw.githubusercontent.com/kedacore/keda/refs/heads/main/config/crd/bases/keda.sh_scaledobjects.yaml \
-          -o scaledobject-crd.yaml
-        yq -o=json '.spec.versions[] | select(.name == "v1alpha1") | .schema.openAPIV3Schema' scaledobject-crd.yaml > crds/keda.sh_v1alpha1_ScaledObject.json
+        curl -sSL https://raw.githubusercontent.com/kedacore/charts/refs/tags/v2.17.2/keda/templates/crds/crd-scaledobjects.yaml \
+          -o crd-scaledobjects.yaml
+        yq -o=json '.spec.versions[] | select(.name == "v1alpha1") | .schema.openAPIV3Schema' crd-scaledobjects.yaml > crds/keda.sh_v1alpha1_ScaledObject.json
         
     - name: Helm Lint
       shell: bash
@@ -59,7 +59,6 @@ runs:
     - name: Validate with kubeconform
       shell: bash
       run: |
-        cat crds/keda.sh_v1alpha1_ScaledObject.json
         helm template ${{ env.RELEASE_NAME }} ${{ inputs.chart-path }} \
           --values ${{ inputs.chart-path }}/values.yaml \
           --namespace ${{ inputs.namespace }} \
